blog: make padding smaller on mobile, projectBox markdown inherit style from blogBox, fix blogInfo h3 h4, blog row margin auto

--- a/src/components/blogBox/blogModal.scss
+++ b/src/components/blogBox/blogModal.scss
@@ -172,3 +172,26 @@
     }
   }
 }
+
+@media only screen and (max-width: 400px) {
+  .blogModal {
+    display: flex;
+    justify-content: left;
+    align-items: left;
+    width: 98%;
+    // height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 200;
+    // text-align: center;
+    margin: 0 1%;
+
+    div {
+      z-index: 400;
+  
+      .blog_show_modal {
+      }
+    }
+  }
+}
