--- a/src/components/hackathonCard/hackathonCard.scss
+++ b/src/components/hackathonCard/hackathonCard.scss
@@ -120,13 +120,13 @@
       // max-width: 370px;
       // margin-top: 10px;
       // margin-bottom: 10px;
+      
+      h3 {
+        font-size: 1.7rem;
+      }
 
       h4 {
-        font-size: 1.2rem;
-      }
-  
-      h3 {
-        font-size: 1.1rem;
+        font-size: 1.5rem;
       }
 
       p {
