--- a/src/sections/blogs/blogs.scss
+++ b/src/sections/blogs/blogs.scss
@@ -22,6 +22,10 @@
   display: none;
 }
 
+.swiper-blog-box {
+  margin: auto auto;
+}
+
 @media screen and (max-width: 990px) {
   #blogs {
     // text-align: center;
